<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="top"
        android:background="@color/Title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlesize">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/listofall"
            android:textColor="@color/TitleText"
            android:fontFamily="sans-serif-condensed"
            android:textSize="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <LinearLayout
            android:id= "@id/bool"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:onClick="onClick">
            <TextView
                android:id="@+id/booltext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/bool"
                android:textColor="@color/Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="40dp" />
        </LinearLayout>
        <LinearLayout
            android:id= "@id/relational"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="5">
            <TextView
                android:id="@+id/relationaltext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/relation"
                android:textColor="@color/Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="40dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>